--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "johnallenhopperwebdeveloper",
   "version": "1.0.0",
+  "engines": {
+    "node": "8.4.0",
+    "npm": "5.4.1"
+  },
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
