--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
-    "start": "gulp start",
+    "start": "node server.js",
     "build": "gulp build"
   },
   "author": "John A. Hopper",
